--- a/index.html
+++ b/index.html
@@ -1442,9 +1442,8 @@ footer {
         <p>Upper West Region, Ghana</p>
         <p>Email:domoningegabriel@gmail.com   
                  yengezekiel2@gmail.com</p>
-        <p>Phone: : ‪+233550502984
-           ‪+233203548382
-        </p>
+        <p>Phone: +233550502984, +233203548382</p>
+     
       </div>
       
       <div class="footer-section">
@@ -1531,4 +1530,5 @@ footer {
     });
   </script>
 </body>
+
 </html>
